Visibility fix

--- a/src/Components/Reusable/GlowingGUI.module.css
+++ b/src/Components/Reusable/GlowingGUI.module.css
@@ -18,6 +18,7 @@
     min-width: fit-content;
     height: fit-content;
     padding: 0.8em;
+    color: violet;
     transition: all 0.7s;
 }
 .ToggleButton{
